Change exec name: hw2 -> snarf.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: gcc:5.4.0
 variables:
     GIT_SSL_NO_VERIFY: "true"
     CRITERIONLINK: https://github.com/Snaipe/Criterion/releases/download/v2.3.2/criterion-v2.3.2-linux-x86_64.tar.bz2
-    EXEC: hw2
+    EXEC: snarf
     HW_DIR: hw2
 before_script:
     - apt-get update &>/dev/null
