--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,17 +1,9 @@
-image: gcc:5.4.0
+image: hwrunner:latest
 variables:
     GIT_SSL_NO_VERIFY: "true"
-    CRITERIONLINK: https://github.com/Snaipe/Criterion/releases/download/v2.3.2/criterion-v2.3.2-linux-x86_64.tar.bz2
     EXEC: budmm
     HW_DIR: hw3
 before_script:
-    - apt-get update &>/dev/null
-    - apt-get install -y curl make gcc bzip2 &>/dev/null
-    - mkdir -p /usr/include/criterion /usr/lib
-    - curl -sLo /tmp/criterion.tar.bz2 $CRITERIONLINK
-    - tar -xjf /tmp/criterion.tar.bz2 -C /tmp
-    - cp -r /tmp/criterion-v2.3.2/include/criterion /usr/include
-    - cp /tmp/criterion-v2.3.2/lib/* /usr/lib
     - make clean all -C ${HW_DIR}
 stages:
     - run
