--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,13 +6,15 @@ variables:
 before_script:
     - make clean all -C ${HW_DIR}
 stages:
+    - build
     - run
     - test
-test:
-    stage: test
-    script:
-        - ${HW_DIR}/bin/${EXEC}_test -S --verbose=0 --timeout 5
+build:
 run:
     stage: run
     script:
         - ${HW_DIR}/bin/${EXEC} -h
+test:
+    stage: test
+    script:
+        - ${HW_DIR}/bin/${EXEC}_test -S --verbose=0 --timeout 5
